# agent-arena

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEMO.md  DEPLOY.md  Dockerfile  FRONTEND.md  LICENSE  Makefile  NOTICE  PITCH.md  README.md  SELF_ASSESSMENT.md  SUBMISSION.md  SUBMISSION_PACKET.md  THREAT_MODEL.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml  live-arena.yml
api/: index.py
bitarena/: __init__.py  client.py  config.py  external_example.py  llm.py  redteam.py
bitarena/agents/: __init__.py  base.py  baseline.py  debate.py  funding.py  llm_swarm.py  memo.py  nl_strategy.py  persona.py  personas.py  reflection.py  regime.py  rl.py  swarm.py
bitarena/api/: __init__.py  app.py
config/: README.md  issuer_pubkey.hex
evidence/: README.md  allocator.json  delta_neutral_carry.json  external_agent_session.json  firewall_bench.json  firewall_demos.json  firewall_value.json  funding_carry.json  funding_edge_walkforward.json  llm_debate.json  model_arena.json  nl_strategy.json  overfit_court.json  overfit_trap.json  playbook_backtests.json  redteam.json  reflection.json  regime_killswitch.json  swarm_edge.json  tokenized_session_risk.json  tokenized_stock_sweep.json  trade_memo.json  usage_record.csv  usage_record.json  walk_forward.json
playbook/: PUBLISHED.md
scripts/: allocator_demo.py  bench_firewall.py  check_docs.py  custom_agent_example.py  delta_neutral_carry.py  demo_firewall.py  demo_run.py  external_agent.py  firewall_value.py  funding_edge_wf.py  funding_study.py  gen_signing_key.py  integrate_example.py  live_step.py  llm_debate.py  make_briefs.py  make_evidence.py  model_arena.py  nl_strategy.py  overfit_court.py  overfit_trap.py  place_live_order.py  redteam.py  reflection_demo.py  regime_killswitch.py  run_arena.py  swarm_edge_test.py  tokenized_session_study.py  tokenized_stock_sweep.py  trade_memo.py  usage_record.py  verify_cert.py  verify_evidence.py  walk_forward.py
tests/: test_agents.py  test_allocator.py  test_api.py  test_arena.py  test_arena_properties.py  test_bitget_client.py  test_briefs.py  test_client.py  test_connector_properties.py  test_court.py  test_debate.py  test_delta_neutral.py  test_edge_cases.py  test_edge_significance.py  test_external_agent.py  test_factors.py  test_firewall.py  test_firewall_properties.py  test_firewall_value.py  test_funding_agent.py  test_funding_carry.py  test_funding_edge.py  test_funding_price.py  test_gates.py  test_killswitch.py  test_ledger.py  test_ledger_properties.py  test_live_arena.py  test_llm_swarm.py  test_market.py  test_mcp.py  test_memo.py  test_model_arena.py  test_more_agents.py  test_nl_strategy.py  test_overfit.py  test_paper_exchange.py  test_passport.py  test_perception.py  test_perception_properties.py  (+17 more)
web/: index.html  proof-deck.html
(+201 files in other folders)
