[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitarena"
version = "0.1.0"
description = "Agent Arena — a live proving ground and safety firewall for autonomous trading agents on Bitget."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prateek Tripathi" }]
keywords = ["trading", "ai-agents", "bitget", "crypto", "risk", "backtesting", "firewall", "mcp"]

dependencies = [
  "pydantic>=2.6",
  "numpy>=1.26",
  "scipy>=1.11",
  "cryptography>=42.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]
# Heavy, optional competitor backends. Not required for the core arena.
rl = ["finrl"]
backtest = ["vectorbt"]

[tool.hatch.build.targets.wheel]
packages = ["bitarena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    # FastAPI TestClient's httpx/httpx2 notice (third-party, not our code)
    "ignore:Using .httpx. with",
]

[tool.ruff]
line-length = 100
target-version = "py311"
