[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitarena"
version = "0.1.0"
description = "Agent Arena — a live proving ground and safety firewall for autonomous trading agents on Bitget."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prateek Tripathi" }]
keywords = ["trading", "ai-agents", "bitget", "crypto", "risk", "backtesting", "firewall", "mcp"]

# Upper bounds cap the next major so a breaking upstream release can't silently red-fail a
# fresh-clone `uv pip install` + pytest during judging. All current resolves sit below these.
dependencies = [
  "pydantic>=2.6,<3",
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "cryptography>=42.0,<50",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
llm = ["openai>=1.30,<3"]
api = ["fastapi>=0.110,<1", "uvicorn>=0.29,<1"]
mcp = ["mcp>=1.2,<2"]
dev = ["pytest>=8.0,<10", "pytest-asyncio>=0.23,<2", "pytest-cov>=5.0,<8"]
# Heavy, optional competitor backends. Not required for the core arena.
rl = ["finrl"]
backtest = ["vectorbt"]

[tool.hatch.build.targets.wheel]
packages = ["bitarena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    # FastAPI TestClient's httpx/httpx2 notice (third-party, not our code)
    "ignore:Using .httpx. with",
]

[tool.ruff]
line-length = 100
target-version = "py311"
